navigation menu, trying to fix nav icon at mobile width - off screen previously

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -60,7 +60,7 @@
   .sidebar-padding {width:90%; padding: 0px;}
   }
   @media (max-width: 400px) {
-  .sidebar-padding {width:75%; padding: 0 0 0 50px;}
+  .sidebar-padding {width:95%; padding: 0px;}
   }
  
  
@@ -485,6 +485,13 @@ there.
 
 /* Header */
 body > header {
+  background: url('../images/UnionStation_Sunset.jpg') top center no-repeat;
+  background-size: cover;
+  width:100%;
+  height:auto;
+}
+
+#Home {
   background: url('../images/UnionStation_Sunset.jpg') top center no-repeat;
   background-size: cover;
   width:100%;
@@ -1013,6 +1020,7 @@ footer nav ul li a:active {
 
 .navigation {
   position: fixed;
+  text-align:center;
   width: 14rem;
   height: 100vh;
   top: 0;
